Updated Website responsivity
Updated website responsivity by recreating the layout using grid instead of flex and updated text to use the viewport to determine font-size.

--- a/index.html
+++ b/index.html
@@ -3,36 +3,41 @@
 <html>
 
 <head>
-
-    <link rel="stylesheet" href="src/css/style.css">
-
+  <html lang="sv">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="src/css/style.css">
 </head>
 
 <body>
-
-<div class="background">
-    <img src="src/images/äng.png"></img>
-    <div class="titleUpper"><div class="titleLower">Malma By och Ängar</div></div>
-    <div class="bodyUpper">
-        <div>
-            <div class="header">
-                <div><div class="headerText"><div class="stodOss"><a href="https://www.google.com">Stöd Oss</a></div></div></div>
-                <div><div class="headerText"><a href="https://www.google.com">Utforska Naturen</a></div></div>
-                <div><div class="headerText"><a href="https://www.google.com">Viktiga Datum</a></div></div>
-                <div><div class="headerText"><a href="https://www.google.com">Kontakt</a></div></div>
-            </div>
+  <div class="gridContainer">
+    <div class="left"><h1>Test TESTESTETSTETST</h1></div>
+    <div class="right">
+      <div class="rightItem">
+        <div class="header">
+          <div>Test</div>
+          <div>Test</div>
+          <div>Test</div>
+          <div>Test</div>
         </div>
-        <div>
-            <div class="titleBodyLower">Om Oss</div>
-        </div>
-        <div>
-            <div class="bodyLower">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor lorem lacus, ut egestas augue pulvinar et. Sed viverra mi sed nulla dapibus, vel tempus libero porttitor. Sed ut risus vel elit pharetra posuere ac in ipsum. Nulla vestibulum nibh eget porttitor auctor. Phasellus scelerisque semper ultricies. Mauris a hendrerit purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis egestas, enim sit amet venenatis porta, sapien magna euismod dui, ac posuere metus magna at quam. Vivamus scelerisque eget nulla eu dictum. Nullam eleifend malesuada elit, sed mollis lectus interdum eu. Curabitur consequat dui mi, a facilisis turpis blandit id. Curabitur odio est, venenatis ac velit a, finibus lobortis orci. Fusce varius dapibus lacus ut ultricies.</div>
-        </div>
-        <div>
-            <div class="callToAction">Läs Mer</div>
-        </div>
+      </div>
+      <div class="rightItem" id="title">Test</div>
+      <div class="rightItem" id="body">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mauris nulla, 
+        dapibus sit amet placerat id, scelerisque quis lacus. Nunc vel massa sit amet felis accumsan cursus. 
+        In lorem purus, varius consectetur cursus sit amet, porta non ex. Proin blandit bibendum est non 
+        semper. Maecenas ligula dolor, molestie imperdiet fermentum nec, feugiat sed dui. 
+        Integer hendrerit convallis metus non ultricies. Cras rhoncus blandit nisl ac scelerisque. 
+        Nulla feugiat, sem nec condimentum laoreet, velit ante posuere ipsum, 
+        nec placerat massa enim in augue. Curabitur ornare leo lobortis, tincidunt arcu tincidunt, 
+        fringilla odio. Sed finibus, justo id fringilla lobortis, ex nisl cursus diam, 
+        ut imperdiet ex dui quis neque.  
+      </div>
+      <div class="rightItem" id="button">
+        <div class="button">Test</div>
+      </div>
     </div>
-</div>
+  </div>
 
 </body>
 
