Added Subpages and link styling

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="right">
       <div class="rightItem">
         <div class="header">
-          <div>Test</div>
-          <div>Test</div>
-          <div>Test</div>
-          <div>Test</div>
+          <div><a href="stod_oss.html">Test</a></div>
+          <div><a href="utforska_naturen.html">Test</a></div>
+          <div><a href="viktiga_datum.html">Test</a></div>
+          <div><a href="kontakt.html">Test</a></div>
         </div>
       </div>
       <div class="rightItem" id="title">Test</div>
@@ -34,7 +34,7 @@
         ut imperdiet ex dui quis neque.  
       </div>
       <div class="rightItem" id="button">
-        <div class="button">Test</div>
+        <a href="om_oss.html"><div class="button">Test</div></a>
       </div>
     </div>
   </div>
