--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <html lang="sv">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="src/index/css/style.css">
+  <link rel="stylesheet" href="src/css/index/style.css">
 </head>
 
 <body>
