--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
 <body>
   <div class="gridContainer">
-    <div class="left"><h1>Test TESTESTETSTETST</h1></div>
+    <div class="left" id="name"><h1>Föreningen Malma By Och Ängar</h1></div>
     <div class="right">
       <div class="rightItem">
         <div class="header">
-          <div><a href="stod_oss.html">Test</a></div>
-          <div><a href="utforska_naturen.html">Test</a></div>
-          <div><a href="viktiga_datum.html">Test</a></div>
-          <div><a href="kontakt.html">Test</a></div>
+          <div><a href="stod_oss.html">Stöd Oss</a></div>
+          <div><a href="utforska_naturen.html">Utforska Naturen</a></div>
+          <div><a href="viktiga_datum.html">Viktiga Datum</a></div>
+          <div><a href="kontakt.html">Kontakt</a></div>
         </div>
       </div>
-      <div class="rightItem" id="title">Test</div>
+      <div class="rightItem" id="title">Om Oss</div>
       <div class="rightItem" id="body">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mauris nulla, 
         dapibus sit amet placerat id, scelerisque quis lacus. Nunc vel massa sit amet felis accumsan cursus. 
@@ -34,7 +34,7 @@
         ut imperdiet ex dui quis neque.  
       </div>
       <div class="rightItem" id="button">
-        <a href="om_oss.html"><div class="button">Test</div></a>
+        <a href="om_oss.html"><div class="button">Läs Mer</div></a>
       </div>
     </div>
   </div>
