--- a/om_oss.html
+++ b/om_oss.html
@@ -11,6 +11,11 @@
 
 <body>
 
+  <h1>Mål</h1> 
+  Föreningens ändamål skall vara att bevara befintliga värden i Malma by<br/>
+  med dess omgivande natur- och kulturlandskap och att motverka<br/>
+  markexploatering inom området.<br/>
+
   <h1>stadgar:</h1>
   Stadgar för Föreningen Malma by och ängar<br/>
   Preliminärt antagna vid medlemsmöte den 8 juni 2022<br/>
