Fixed Image Pathing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="gridContainer">
-    <div class="left" id="name"><h1>Föreningen Malma By Och Ängar</h1></div>
+    <div class="left"><h1 id="name">Föreningen Malma By Och Ängar</h1></div>
     <div class="right">
       <div class="rightItem">
         <div class="header">
