Updated description of organisation

--- a/index.html
+++ b/index.html
@@ -23,15 +23,9 @@
       </div>
       <div class="rightItem" id="title">Om Oss</div>
       <div class="rightItem" id="body">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mauris nulla, 
-        dapibus sit amet placerat id, scelerisque quis lacus. Nunc vel massa sit amet felis accumsan cursus. 
-        In lorem purus, varius consectetur cursus sit amet, porta non ex. Proin blandit bibendum est non 
-        semper. Maecenas ligula dolor, molestie imperdiet fermentum nec, feugiat sed dui. 
-        Integer hendrerit convallis metus non ultricies. Cras rhoncus blandit nisl ac scelerisque. 
-        Nulla feugiat, sem nec condimentum laoreet, velit ante posuere ipsum, 
-        nec placerat massa enim in augue. Curabitur ornare leo lobortis, tincidunt arcu tincidunt, 
-        fringilla odio. Sed finibus, justo id fringilla lobortis, ex nisl cursus diam, 
-        ut imperdiet ex dui quis neque.  
+        Föreningens ändamål skall vara att bevara befintliga värden i Malma by
+        med dess omgivande natur- och kulturlandskap och att motverka
+        markexploatering inom området.
       </div>
       <div class="rightItem" id="button">
         <a href="om_oss.html"><div class="button">Läs Mer</div></a>
