Minimum Viable product

--- a/index.html
+++ b/index.html
@@ -10,33 +10,24 @@
 </head>
 
 <body>
+
   <div class="backgroundImg"></div>
+
   <div class="header">
     <div id="headerTitle"><h2><a href="index.html">Föreningen Malma By och Ängar</a></h2></div>
-    <div id="headerLinks">
-      <a id="stodOss" onmouseover="stodOssEnter()" onmouseout="stodOssExit()">
-        Stöd Oss
-        <div class="dropdown-content" id="dropdwn1" onmouseover="stodOssEnter()" onmouseout="stodOssExit()">
-          <a href="stod_oss.html">Medlemsskap</a>
-        </div>
-      </a>
-      <a id="omOss" onmouseover="omOssEnter()" onmouseout="omOssExit()">
-        Om Föreningen
-        <div class="dropdown-content" onmouseover="omOssEnter()" onmouseout="omOssExit()">
-          <a href="om_oss.html">Bakgrund</a>
-          <a href="om_oss.html">Mål</a>
-          <a href="styrelse.html">Styrelse</a>
-          <a href="om_oss.html">Stadgar</a>
-        </div>
-      </a>
-      <a id="kontakt" onmouseover="kontaktEnter()" onmouseout="kontaktExit()">
-        Kontakt
-        <div class="dropdown-content" id="dropdwn2" onmouseover="kontaktEnter()" onmouseout="kontaktExit()">
-          <a href="kontakt.html">kontakt</a>
-        </div>
-      </a>
+    <div id="headerLinks" style="color: white;">
+        <a href="bli_medlem.html" id="stodOss" onmouseover="stodOssEnter()" onmouseout="stodOssExit()">Bli Medlem</a>
+        <a id="omOss" onmouseover="omOssEnter()" onmouseout="omOssExit()">
+            Om Föreningen
+            <div class="dropdown-content" id="dropdwn2" onmouseover="omOssEnter()" onmouseout="omOssExit()">
+              <a href="om_oss.html">Mål</a>
+              <a href="styrelse.html">Styrelse</a>
+              <a href="stadgar.html">Stadgar</a>
+            </div>
+        </a>
     </div>
   </div>
+
   <div class="gridContainer">
     <div class="left"><h1 id="name">Föreningen Malma By Och Ängar</h1></div>
     <div class="right">
@@ -47,7 +38,7 @@
         markexploatering inom området.
       </div>
       <div id="button">
-        <a href="om_oss.html">Läs Mer</a>
+        <a href="mal.html">Läs Mer</a>
       </div>
     </div>
   </div>
