Updated faulty links

--- a/mal.html
+++ b/mal.html
@@ -16,9 +16,9 @@
             <a id="omOss" onmouseover="omOssEnter()" onmouseout="omOssExit()">
                 Om Föreningen
                 <div class="dropdown-content" id="dropdwn2" onmouseover="omOssEnter()" onmouseout="omOssExit()">
-                  <a href="om_oss.html">Mål</a>
-                  <a href="styrelse.html">Styrelse</a>
-                  <a href="stadgar.html">Stadgar</a>
+                    <a href="mal.html">Mål</a>
+                    <a href="styrelse.html">Styrelse</a>
+                    <a href="stadgar.html">Stadgar</a>
                 </div>
             </a>
         </div>
