Removed unnecesary files and made slight styling changes

--- a/bli_medlem.html
+++ b/bli_medlem.html
@@ -58,13 +58,15 @@
     </div>
 
     <div class="stadgarFlex">
-        <h1>Bli Medlem</h1>
-        <p>
-          <b>Medlemskap:</b><br>
-          Ulla-Britt Ekström tar emot medlemsansökan på denna adress:
-          ub.ekstrom.fogelin@icloud.com
-          För närvarande ingen medlemsavgift.
-        </p>
+      <div class="stadgarFlexBackground">
+          <h1>Bli Medlem</h1>
+          <p>
+            <b>Medlemskap:</b><br>
+            Ulla-Britt Ekström tar emot medlemsansökan på denna adress:
+            ub.ekstrom.fogelin@icloud.com
+            För närvarande ingen medlemsavgift.
+          </p>
+      </div>
     </div>
 
 
