--- a/mal.html
+++ b/mal.html
@@ -58,12 +58,14 @@
     </div>
 
     <div class="stadgarFlex">
-        <h1>Mål</h1>
-        <p>
-            Föreningens ändamål skall vara att bevara befintliga värden i Malma by
-            med dess omgivande natur- och kulturlandskap och att motverka
-            markexploatering inom området.
-        </p>
+      <div class="stadgarFlexBackground">
+          <h1>Mål</h1>
+          <p>
+              Föreningens ändamål skall vara att bevara befintliga värden i Malma by
+              med dess omgivande natur- och kulturlandskap och att motverka
+              markexploatering inom området.
+          </p>
+        </div>
     </div>
 
 
