Added More information and updated phone compatibality

--- a/stadgar.html
+++ b/stadgar.html
@@ -38,21 +38,23 @@
 
         <div id="headerLinks" style="color: black;">
             <a href="bli_medlem.html" id="stodOss" onmouseover="stodOssEnter()" onmouseout="stodOssExit()">Bli Medlem</a>
-            <a id="omOss" onmouseover="omOssEnter()" onmouseout="omOssExit()">
+            <a href="om-oss.html" id="omOss" onmouseover="omOssEnter()" onmouseout="omOssExit()">
                 Om Föreningen
                 <div class="dropdown-content" id="dropdwn2" onmouseover="omOssEnter()" onmouseout="omOssExit()">
+                    <a href="om-oss.html">Om Föreningen</a>
                     <a href="mal.html">Mål</a>
                     <a href="styrelse.html">Styrelse</a>
                     <a href="stadgar.html">Stadgar</a>
                 </div>
             </a>
+            <a href="kontakt.html" id="kontakt" onmouseover="kontaktEnter()" onmouseout="kontaktExit()">Kontakt</a>
         </div>
     </div>
 
     <!-- Body -->
 
-    <div class="stadgarFlex">
-        <div class="stadgarFlexBackground">
+    <div class="flex-layout-1">
+        <div class="flex-layout-1-card">
           <h1>Stadgar</h1>
           <p>
               Stadgar för Föreningen Malma by och ängar
