Added remaining links

--- a/bli_medlem.html
+++ b/bli_medlem.html
@@ -24,9 +24,11 @@
                   <ul id="menu">
                     <a href="index.html"><li>Hem</li></a>
                     <a href="bli_medlem.html"><li>Bli Medlem</li></a>
+                    <a href="om-oss.html"><li>Om Föreningen</li></a>
                     <a href="mal.html"><li>Mål</li></a>
                     <a href="styrelse.html"><li>Styrelse</li></a>
                     <a href="stadgar.html"><li>Stadgar</li></a>
+                    <a href="kontakt.html"><li>Kontakt</li></a>
                   </ul>
                 </div>
               </nav>
