--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
                 <a href="kontakt.html"><li>Kontakt</li></a>
               </ul>
             </div>
-          </nav>
+        </nav>
     </div>
+
+    <h1 id="phone-title">Föreningen Malma By Och Ängar</h1>
     
     <!-- Navbar for pc -->
 
