--- a/mal.html
+++ b/mal.html
@@ -35,6 +35,8 @@
             </nav>
     </div>
 
+    <h1 id="phone-title">Föreningen Malma By Och Ängar</h1>
+
     <!-- Navbar for pc -->
 
     <div id="headerLinks" style="color: black;">
