--- a/om-oss.html
+++ b/om-oss.html
@@ -37,6 +37,8 @@
                 </div>
             </nav>
         </div>
+        
+        <h1 id="phone-title">Föreningen Malma By Och Ängar</h1>
 
         <!-- Navbar for pc -->
 
