--- a/stadgar.html
+++ b/stadgar.html
@@ -36,6 +36,8 @@
               </nav>
         </div>
 
+        <h1 id="phone-title">Föreningen Malma By Och Ängar</h1>
+
         <!-- Navbar for pc -->
 
         <div id="headerLinks" style="color: black;">
