--- a/index.html
+++ b/index.html
@@ -1,125 +1,207 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-  <html lang="sv">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="src/css/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/styles.css">
+    <link rel="stylesheet" href="src/header.css">
+    <link rel="stylesheet" href="src/footer.css">
+    <title>Malma Ängar</title>
 </head>
-
 <body>
-
-  <div class="backgroundImg">
-    <img src="src/images/malmangar.jpg">
-  </div>
-
-  <!-- Header -->
-
-  <div class="header">
-    <div id="headerTitle">
-        <h2><a href="index.html">Föreningen Malma By och Ängar</a></h2>
-
-        <!-- Menu for phone -->
-
-        <nav role="navigation">
-            <div id="menuToggle">
-              <input type="checkbox" />
-              <span></span>
-              <span></span>
-              <span></span>
-              <ul id="menu">
-                <a href="index.html"><li>Hem</li></a>
-                <a href="bli_medlem.html"><li>Bli Medlem</li></a>
-                <a href="om-oss.html"><li>Om Föreningen</li></a>
-                <a href="mal.html"><li>Mål</li></a>
-                <a href="styrelse.html"><li>Styrelse</li></a>
-                <a href="stadgar.html"><li>Stadgar</li></a>
-                <a href="kontakt.html"><li>Kontakt</li></a>
-              </ul>
-            </div>
-          </nav>
-    </div>
     
-    <!-- Navbar for pc -->
+    <nav role="navigation">
+        <div id="menuToggle">
+          <input type="checkbox" />
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="menu">
+            <a href="index.html"><li>Hem</li></a>
+            <a href="pages/bli-medlem.html"><li>Bli Medlem</li></a>
+            <a href="pages/om-föreningen.html"><li>Om Föreningen</li></a>
+            <a href="pages/mål.html"><li>Mål</li></a>
+            <a href="pages/styrelse.html"><li>Styrelse</li></a>
+            <a href="pages/stadgar.html"><li>Stadgar</li></a>
+            <a href="pages/kontakt.html"><li>Kontakt</li></a>
+          </ul>
+        </div>
+    </nav>
 
-    <div id="headerLinks">
-        <a href="bli_medlem.html" id="stodOss" onmouseover="stodOssEnter()" onmouseout="stodOssExit()">Bli Medlem</a>
-        <a href="om-oss.html" id="omOss" onmouseover="omOssEnter()" onmouseout="omOssExit()">
-            Om Föreningen
-            <div class="dropdown-content" id="dropdwn2" onmouseover="omOssEnter()" onmouseout="omOssExit()">
-                <a href="om-oss.html">Om Föreningen</a>
-                <a href="mal.html">Mål</a>
-                <a href="styrelse.html">Styrelse</a>
-                <a href="stadgar.html">Stadgar</a>
+    <!-- Header -->
+    <div class="navbar">
+        <div class="dropdown">
+            <a class="dropbtn" href="pages/bli-medlem.html">Bli Medlem</a>
+        </div>
+        <div class="dropdown">
+            <a class="dropbtn" href="pages/om-föreningen.html">Om Föreningen</a>
+            <div class="dropdown-content">
+                <a href="pages/om-föreningen.html">Om Föreningen</a>  
+                <a href="pages/mål.html">Mål</a>
+                <a href="#">Styrelse</a>
+                <a href="pages/stadgar.html">Stadgar</a>
             </div>
-        </a>
-        <a href="kontakt.html" id="kontakt" onmouseover="kontaktEnter()" onmouseout="kontaktExit()">Kontakt</a>
+        </div>
+        <div class="dropdown">
+            <a class="dropbtn" href="pages/kontakt.html">Kontakt</a>
+        </div>
     </div>
-</div>
 
-<!-- Body -->
-
-  <div class="gridContainer">
-    <div class="left">Rädda Malma by och ängar!</div>
-    <div class="right">
-      <div id="title">Hjälp oss bevara vår natur!</div>
-      <div id="body">
-        Malma ängar har en rik biologisk mångfald och är enligt Jordbruksverket en av Sveriges mest bevaransvärda 
-        ängar. I Dagsläget är ängarna starkt hotade av markexploatering och bebyggelse. 
-        Istället för att fylla området med grå betong vill vi istället bevara ängarna och utveckla det närliggande 
-        området till ett frodande natur- och kulturlandskap.<br><br>
-
-        Hjälp oss stoppa exploateringen och bevara detta vackra område för framtida generationer!
-      </div>
-      <div id="button">
-        <a href="om-oss.html">Läs Mer</a>
-      </div>
+    <!-- Body Homepage -->
+    <div class="background-image">
+        <img src="src/images/malmangar.jpg" />
     </div>
-  </div>
 
-<!-- JS -->
+    <div class="homepage-frontscreen">
+        <div class="homepage-left">
+            <h1 style="font-size: 3rem;">Rädda Malma By Och Ängar!</h1>
+        </div>
+        <div class="homepage-right">
+            <h2>Hjälp oss bevara vår natur!</h2>
+            <p>
+                Malma ängar har en rik biologisk mångfald och är enligt Jordbruksverket en av Sveriges mest bevaransvärda ängar. I Dagsläget är ängarna starkt hotade av markexploatering och bebyggelse. 
+                Istället för att fylla området med grå betong vill vi istället bevara ängarna och utveckla det närliggande området till ett frodande natur- och kulturlandskap.<br><br>
 
-<script>
+                Hjälp oss stoppa exploateringen och bevara detta vackra område för framtida generationer!
+            </p>
+            <a href="#homepage-info-page">Läs Mer</a>
+        </div>
+    </div>
 
-var stodOss = document.getElementById('stodOss');
-var omOss = document.getElementById('omOss');
-var kontakt = document.getElementById('kontakt')
+    <!-- body Info -->
+    <div class="homepage-info" id="homepage-info-page">
+        <div>
+            <h3>Biologisk mångfald i hagen</h3>
+            <p>
+                Åkerbackarna och hällarna i betesmarken är mycket artrika. Floran har utvecklats och
+                formats genom flera hundra år av öppethållande genom bete och slåtter. Den
+                långvariga hävden har magrat ur marken och skapat förutsättningar för
+                konkurrenssvaga blommande örter och gräs. Karaktärsarter på backarna är
+                tjärblomster, backklöver, backsmultron, harklöver, brudbröd, axveronika, olika arter av
+                fetknoppar, backnejlika, ängsskallra och solvända. Bland dessa är axveronika,
+                backklöver och solvända samt flentimotej, vippärt, gullklöver och vårstarr rödlistade.
+                Att en art är rödlistad innebär att den bedöms riskera att dö ut från Sverige.
+                Hur många av dessa kan du hitta i sommar?
+            </p>
+        </div>
+        <div class="homepage-info-images">
+            <img src="src/images/blomma2.png" />
+            <img src="src/images/blomma1.png" />
+            <img src="src/images/blomma1.jpg" />
+            <img src="src/images/blomma2.jpg" />
+        </div>
+        <div>
+            <h3>Vaxskivlingar är ofta praktfulla</h3>
+            <p>
+                Den magra jorden och den långa beteshävden har givit upphov till en rik
+                ängssvampsflora. Det finns minst 12 olika arter av vaxskivlingar och
+                ängsfingersvampar på ängen. Det tyder på att området har ett högt lokalt
+                bevarandevärde som ängs- och betesmark. Två av svamparna, scharlakansvaxskivling
+                och gråbrun ängsfingersvamp, är dessutom rödlistade.
+                Vaxskivlingar är ofta riktigt praktfulla och färggranna svampar och roliga att leta efter.
+                Du hittar dem främst under september till oktober.
+            </p>
+        </div>
+        <div>
+            <h3>Insekter på ängen</h3>
+            <div class="homepage-info-images-text">
+                <p>
+                    En stor mängd blommor drar förstås också till sig många fjärilar och andra
+                    pollinerande insekter. På Malma ängar har hittills fem rödlistade fjärilsarter
+                    observerats; humlerotfjäril, violettkantad guldvinge samt sexfläckig, bredbrämad och
+                    mindre bastardsvärmare! Utöver dessa mer sällsynta invånare bor även ett stort antal
+                    andra dagfjärilar, nattflyn, vildbin, vivlar, skinnbaggar och skalbaggar i de varma,
+                    blomrika miljöerna. Inte mindre än 170 arter av ryggradslösa djur finns rapporterade
+                    från området i Artportalen och många fler lär det finnas för den som letar.
+                    Ut och håva, det är vår uppmaning!
+                </p>
+                <img src="src/images/bi1.png" />
+            </div>
+        </div>
+        <div>
+            <h3>Hjälp till rädda Malma by och ängar</h3>
+            <p>
+                Viktigaste grunden för att vi ska bevara ängarna är kunskap om
+                den biologiska mångfald som finns här. Utan kunskap vet vi inte
+                vad som är värt att bevara och hur man ska göra det. Ett bra sätt
+                att lära sig är att vara nyfiken när man är ute i naturen eller att
+                vara med i någon förening.
+                I Facebook-gruppen ”Rädda Malma by och ängar” kan du läsa
+                om kampen. Där finns även epost till personer som du kan
+                kontakta och länkar till beslutsdokument mm.
+            </p>
+            <div class="homepage-info-images">
+                <img src="src/images/malmagård.jpg"/>
+                <img src="src/images/malmaängar1.jpg" />
+                <img src="src/images/malmaängar2.jpg" />
+            </div>
+        </div>
+        <div>
+            <h3>Ägare till Malma by och ängar</h3>
+            <p>
+                Det är Akademiförvaltningen som är markägare och de har
+                tillsammans med Besqab begärt att kommunen planlägger för att
+                bebygga Malma by och ängar. Så här skriver
+                Akademiförvaltningen på sin <a href="www.uaf.se">hemsida:</a>
+            </p>
+            <p style="border: 2px solid black; border-radius: 5px; padding: 10px;">
+                ”Vi förvaltar drömmar om en bättre värld
+                Genom långsiktig och hållbar förvaltning säkerställer vi att våra
+                donatorers vilja fortlever utan att göra avkall på planetens och
+                framtida generationers behov, både ekonomiskt, miljömässigt
+                och socialt.”
+            </p>
+            <p>
+                Kontakta Akdemiförvaltningen och påpeka på att de ska
+                säkerställa en långsiktig hållbar förvaltning som de själva säger
+                att de vill uppnå.
+            </p>
+            <p>
+                <b>VD Kent Berg</b><br>
+                018 - 471 75 40 070-632 93 94 <br>
+                kent.berg@uaf.uu.se
+            </p>
+        </div>
+        <div>
+            <h3>Malma ängar och betesmarker</h3>
+            <p>
+                Ända sedan Malma och Bäcklösa steg ur havet för ca 3500 år sedan har
+                människor bott här och brukat jorden. De förhistoriska spåren i hagen är
+                bland annat skärvstenshögar och gravhögar från bronsåldern. Således har
+                ängen en kontinuitet av betesdrift och åkerbruk i flera tusen år!
+                Liksom i övriga Uppland har man bedrivit åkerbruk varhelst det har varit
+                möjligt och alla platser med finsediment och lera har varit uppodlade. Dessa
+                jordar har brukats som åker fram tills för ca 30–40 år sedan. Backarna och
+                hällmarken däremellan har betats när åkern legat i träda eller efterbetats
+                efter ängsslåtter. Detta har lett till att Malma ängar idag dels består av
+                näringsrika men artfattiga gamla åkertegar, dels av näringsfattiga
+                hällmarker som är mycket artrika.
+                Idag används hagen som betesmark och betas av hästar från Malma gård.
+            </p>
+        </div>
+        <div>
+            <h3>Betet har avgörande betydelse</h3>
+            <p>
+                Betet är av avgörande för att områdets värden för den biologiska
+                mångfalden ska bevaras. Betesdjuren håller undan högväxande gräs och
+                buskar och gynnar de små, lågväxande örterna. Om betesdjuren försvinner
+                växer hagarna snabbt
+                igen. Högväxta gräs som hundäxing och knylhavre och aggressivt växande
+                slånbuskage kommer då konkurrera ut örterna. Lövsly kommer växa upp
+                och slutligen kommer hagen att förvandlas till en ung lövskog.
+            </p>
+            <div class="homepage-info-images">
+                <img src="src/images/häst1.jpg" style="height: unset;"/>
+            </div>
+        </div>
 
-/* Stöd oss */
+        <!-- Saknar Påverka beslut-->
 
-function stodOssEnter() {
-  stodOss.style.backgroundColor = "#575F38";
-}
+    </div>
 
-function stodOssExit() {
-  stodOss.style.backgroundColor = "transparent";
-}
-
-/* Om Förening */
-
-function omOssEnter() {
-  omOss.style.backgroundColor = "#575F38";
-}
-
-function omOssExit() {
-  omOss.style.backgroundColor = "transparent";
-}
-
-/* Kontakt */
-
-function kontaktEnter() {
-  kontakt.style.backgroundColor = "#575F38";
-}
-
-function kontaktExit() {
-  kontakt.style.backgroundColor = "transparent";
-}
-
-
-</script>
+    <!-- Footer (future problem)-->
+    
 
 </body>
-
 </html>
