Update faulty image names

--- a/pages/mål.html
+++ b/pages/mål.html
@@ -75,7 +75,7 @@
 
         </p>
     </div>
-    <img id="image-right" src="../src/images/Bi.JPG" />
+    <img id="image-right" src="../src/images/Bi.jpg" />
 
     <!-- Footer (Future problem) -->
 
