--- a/pages/om-föreningen.html
+++ b/pages/om-föreningen.html
@@ -65,7 +65,7 @@
             naturvärden och värdefulla bidrag av ekosystemtjänster. Vi verkar emot markexploatering i området kring Malma by, Bäcklösa ängar och Bäcklösa Natura2000.
         </p>
     </div>
-    <img id="image-right" src="../src/images/räv.jpg" />
+    <img id="image-right" src="../src/images/Räv.jpg" />
 
     <!-- Footer (Future problem) -->
 
