Add missing link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="dropdown-content">
                 <a href="pages/om-föreningen.html">Om Föreningen</a>  
                 <a href="pages/mål.html">Mål</a>
-                <a href="#">Styrelse</a>
+                <a href="pages/styrelse.html">Styrelse</a>
                 <a href="pages/stadgar.html">Stadgar</a>
             </div>
         </div>
