Update width on styrelse page

--- a/pages/styrelse.html
+++ b/pages/styrelse.html
@@ -83,7 +83,7 @@
         </div>
         <div>
             <img src="../src/images/styrelse/kurt.jpg" />
-            <h3>Kurt Kälsström</h3>
+            <h3>Kurt Källström</h3>
             <span>Suppleant</span>
         </div>
         <div>
