Update som stuff

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h2>Hjälp oss bevara vår natur!</h2>
             <p>
                 Malma ängar har en rik biologisk mångfald och är enligt Jordbruksverket en av Sveriges mest bevaransvärda ängar. I Dagsläget är ängarna starkt hotade av markexploatering och bebyggelse. 
-                Istället för att fylla området med grå betong vill vi istället bevara ängarna och utveckla det närliggande området till ett frodande natur- och kulturlandskap.<br><br>
+                Istället för att fylla området med grå betong vill bevara ängarna och utveckla det närliggande området till ett frodande natur- och kulturlandskap.<br><br>
 
                 Hjälp oss stoppa exploateringen och bevara detta vackra område för framtida generationer!
             </p>
@@ -86,9 +86,9 @@
             </p>
         </div>
         <div class="homepage-info-images">
-            <img src="src/images/blomma2.png" />
-            <img src="src/images/blomma1.png" />
-            <img src="src/images/blomma1.jpg" />
+            <img src="src/images/blomma2.png" loading="lazy"/>
+            <img src="src/images/blomma1.png" loading="lazy"/>
+            <img src="src/images/blomma1.jpg" loading="lazy"/>
         </div>
         <div>
             <h3>Vaxskivlingar är ofta praktfulla</h3>
@@ -115,7 +115,7 @@
                     från området i Artportalen och många fler lär det finnas för den som letar.
                     Ut och håva, det är vår uppmaning!
                 </p>
-                <img src="src/images/bi1.png" />
+                <img src="src/images/bi1.png" loading="lazy"/>
             </div>
         </div>
         <div>
@@ -131,9 +131,9 @@
                 kontakta och länkar till beslutsdokument mm.
             </p>
             <div class="homepage-info-images">
-                <img src="src/images/malmagård.jpg"/>
-                <img src="src/images/malmaängar1.jpg" />
-                <img src="src/images/malmaängar2.jpg" />
+                <img src="src/images/malmagård.jpg" loading="lazy"/>
+                <img src="src/images/malmaängar1.jpg" loading="lazy"/>
+                <img src="src/images/malmaängar2.jpg" loading="lazy"/>
             </div>
         </div>
         <div>
@@ -191,7 +191,7 @@
                 och slutligen kommer hagen att förvandlas till en ung lövskog.
             </p>
             <div class="homepage-info-images">
-                <img src="src/images/häst1.jpg" style="height: unset;"/>
+                <img src="src/images/häst1.jpg" style="height: unset;" loading="lazy"/>
             </div>
         </div>
 
