--- a/index.html
+++ b/index.html
@@ -139,10 +139,9 @@
         <div>
             <h3>Ägare till Malma by och ängar</h3>
             <p>
-                Det är Akademiförvaltningen som är markägare och de har
-                tillsammans med Besqab begärt att kommunen planlägger för att
-                bebygga Malma by och ängar. Så här skriver
-                Akademiförvaltningen på sin <a href="www.uaf.se">hemsida:</a>
+              Ägare till de aktuella markerna på och vid Malma gård och ängar är genom en flerhundraårig donation Gustavianska stiftelsen. 
+              Beslut om stiftelsens ägor fattas av Uppsala universitet genom dess Konsistorium. 
+              Markerna förvaltas av Uppsala Akademiförvaltning. Så här skriver akademiförvaltningen på sin <a href="www.uaf.se">hemsida:</a>
             </p>
             <p style="border: 2px solid black; border-radius: 5px; padding: 10px;">
                 ”Vi förvaltar drömmar om en bättre värld
