--- a/pages/bli-medlem.html
+++ b/pages/bli-medlem.html
@@ -61,8 +61,8 @@
 
     <div class="bli-medlem-info">
         <h1>Bli Medlem</h1>
-        <p class="important">Ulla-Britt Ekström tar emot medlemsansökan via Mail på denna adress:</p>
-        <p class="bold">ub.ekstrom@fogelin@icloud.com</p>
+        <p class="important">Ulla-Britt Fogelin Ekström tar emot medlemsansökan via Mail på följande adress:</p>
+        <p class="bold">ub.ekstrom.fogelin@icloud.com</p>
         <p class="important">Medlemskap är för närvarande utan avgift.</p>
     </div>
 
