--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -68,9 +68,13 @@
             telefon: 070-4250949
         </p>
         <p class="contact-information">
-            <b>Ulla-Britt Fogelström, kassör</b><br>
+            <b>Ulla-Britt Fogelin Ekström, kassör</b><br>
             e-post: ub.ekstrom.fogelin@icloud.com<br>
         </p>
+        <p class="contact-information">
+          <b>Hans Åberg, sekreterare</b><br>
+          e-post: hansaberg46@gmail.com<br>
+      </p>
     </div>
 </body>
 </html>
