--- a/pages/styrelse.html
+++ b/pages/styrelse.html
@@ -62,11 +62,6 @@
             <span>Ordförande</span>
         </div>
         <div>
-            <img src="../src/images/styrelse/sinnika.jpg" />
-            <h3>Sinnika Anell</h3>
-            <span>Vice Ordförande</span>
-        </div>
-        <div>
             <img src="../src/images/styrelse/hans.jpg" />
             <h3>Hans Åberg</h3>
             <span>Sekreterare</span>
@@ -77,19 +72,24 @@
             <span>Kassör</span>
         </div>
         <div>
+          <img src="../src/images/styrelse/boel.jpg" />
+          <h3>Boel Åström</h3>
+          <span>Ledamot</span>
+        </div>
+        <div>
             <img src="../src/images/styrelse/leif.jpg" />
             <h3>Leif Eriksson</h3>
             <span>Ledamot</span>
         </div>
         <div>
-            <img src="../src/images/styrelse/kurt.jpg" />
-            <h3>Kurt Källström</h3>
+            <img src="../src/images/styrelse/carl.jpg" />
+            <h3>Carl Bagge</h3>
             <span>Suppleant</span>
         </div>
         <div>
-            <img />
-            <h3>Charlotte Petersson</h3>
-            <span>Suppleant</span>
+          <img src="../src/images/styrelse/sinnika.jpg" />
+          <h3>Sinnika Anell</h3>
+          <span>Suppleant</span>
         </div>
     </div>
 </body>
