Update image format to optimize loading times

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 och slutligen kommer hagen att förvandlas till en ung lövskog.
             </p>
             <div class="homepage-info-images">
-                <img src="src/images/häst1.jpg" style="height: unset;" loading="lazy"/>
+                <img src="src/images/.jpg" style="height: unset;" loading="lazy"/>
             </div>
         </div>
 
