--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -54,7 +54,7 @@
     </div>
 
     <!-- Body -->
-    <img class="image-title" src="../src/images/bagge.jpg">
+    <img class="image-title" src="../src/images/webp/bagge.webp">
     <div class="cover">
         <h1>Kontakt</h1>
     </div>
