--- a/pages/stadgar.html
+++ b/pages/stadgar.html
@@ -151,6 +151,6 @@
             årsmötet/medlemsmötet beslutar.
         </p>
     </div>
-    <img id="image-right" src="../src/images/gula-stigen.JPG" />
+    <img id="image-right" src="../src/images/webp/gula-stigen.webp" />
 </body>
 </html>
